# notion-generator

./: CREATION_PROCESS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
notion_spec/: markdown_test.md  request.sh  types.md
notion_spec/responses/: first-100-child-of-page.json  new-code-blocks.json  page-as-block.json  page.json
src/: client.rs  download.rs  lib.rs  main.rs  options.rs  render.rs  response.rs
src/highlight/: mod.rs  rust.scm
src/highlight/tests/plain text/: simple.txt  simple.txt.snap
src/highlight/tests/rust/: EVERYTHING_i_hope.html  EVERYTHING_i_hope.rs  EVERYTHING_i_hope.rs.snap  attributes.html  attributes.rs  attributes.rs.snap  constants.html  constants.rs  constants.rs.snap  functions_and_macros.html  functions_and_macros.rs  functions_and_macros.rs.snap  turbofish.html  turbofish.rs  turbofish.rs.snap  type_builtin.html  type_builtin.rs  type_builtin.rs.snap
src/highlight/tests/toml/: simple.toml  simple.toml.snap
