[package]
name = "notion-generator"
description = "Takes in a Notion page and turns it into an HTML page!"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
async-recursion = { version = "0.3" }
clap = { version = "3.0.0-beta.5" }
emoji = { version = "0.2" }
futures-util = { version = "0.3" }
itertools = { version = "0.10" }
katex = { version = "0.4" }
maud = { version = "0.23" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tree-sitter = { version = "0.20" }
tree-sitter-highlight = { version = "0.20" }
tree-sitter-rust = { version = "0.20" }

[dev-dependencies]
pretty_assertions = { version = "1" }

[patch.crates-io]
tree-sitter-rust = { git = "https://github.com/Luni-4/tree-sitter-rust", branch = "update-0.20" }
