[package]
name = "notion-generator"
description = "Takes in a Notion page and turns it into an HTML page!"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
async-recursion = { version = "0.3" }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
emoji = { version = "0.2" }
flurry = { version = "0.3" }
futures-util = { version = "0.3" }
itertools = { version = "0.10" }
katex = { version = "0.4" }
maud = { version = "0.23" }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["fs"] }
tree-sitter = { version = "0.20.3" }
tree-sitter-highlight = { version = "0.20.1" }
tree-sitter-rust = { version = "0.20.3" }
tree-sitter-toml = { version = "0.20.0" }
uuid = { version = "0.8", features = ["serde"] }
tower = { version = "0.4", features = ["buffer", "limit", "util"] }

[dev-dependencies]
insta = "1.22.0"
pretty_assertions = { version = "1" }

[workspace]
members = ["bin"]
